# QA-Chatbot-using-Langchain-and-streamlit

Generative AI K/: QaChatbot.py  main.py  pyproject.toml  requirements.txt
Generative AI K/1.LangChainBasics/: langchainbasics.ipynb
